--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,7 +26,7 @@ if (MSVC)
 	#set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} /fsanitize=address /MTd")
 	# MTd for static CRT
 else()
-	set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fsanitize=address -fno-omit-frame-pointer")
+	#set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fsanitize=address -fno-omit-frame-pointer")
 endif()
 
 include_directories("${CMAKE_SOURCE_DIR}/include/")
